# openstack-ansible-os_keystone

./: .gitreview  README.rst  setup.cfg  tox.ini
defaults/: main.yml
doc/source/: conf.py  index.rst
files/: nginx.conf
handlers/: main.yml
meta/: main.yml
releasenotes/source/: conf.py
tasks/: keystone_apache.yml  keystone_credential_autorotate.yml  keystone_credential_create.yml  keystone_db_setup.yml  keystone_db_sync.yml  keystone_federation_sp_idp_setup.yml  keystone_federation_sp_shib_setup.yml  keystone_fernet_keys_autorotate.yml  keystone_idp_self_signed_create.yml  keystone_idp_self_signed_distribute.yml  keystone_idp_self_signed_store.yml  keystone_idp_setup.yml  keystone_install.yml  keystone_install_source.yml  keystone_key_distribute.yml  keystone_key_populate.yml  keystone_ldap_setup.yml  keystone_nginx.yml  keystone_post_install.yml  keystone_pre_install.yml  keystone_service_update.yml  keystone_ssl_self_signed.yml  keystone_uwsgi.yml  main.yml
templates/: keystone-fernet-rotate.sh.j2  keystone-httpd.conf.j2  keystone-uwsgi.ini.j2  keystone.conf.j2  keystone_nginx.conf.j2
tests/: ansible-role-requirements.yml  os_keystone-overrides.yml
vars/: debian.yml  distro_install.yml  gentoo.yml  main.yml  redhat-7.yml  redhat.yml  source_install.yml  suse.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
